Front-end fixes: Add/Remove Entity/Contacts button wrapping, Entity/Contact header styling, add initial value + initial touched for state field

--- a/apcd-cms/src/client/src/components/Forms/Registrations/RegistrationForm.module.css
+++ b/apcd-cms/src/client/src/components/Forms/Registrations/RegistrationForm.module.css
@@ -8,3 +8,9 @@
 .isRequired {
   color: red;
 }
+
+.contactsAndEntitiesButtons {
+  background-color: var(--global-color-accent--normal);
+  border-color: var(--global-color-accent--normal);
+  color: var(--global-color-primary--xx-light);
+}
